api-fiscalizacion-dev/routes.route.openshift.io.yaml
apiVersion: v1
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    creationTimestamp: "2023-05-25T15:23:44Z"
    labels:
      app: cache-service
      application: cache-service
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      template: cache-service
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: cache-service
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494852"
    uid: 68f42cd9-7912-4eaf-bf7b-8d7ad507f979
  spec:
    host: cache-https-route-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: https
    tls:
      termination: reencrypt
    to:
      kind: Service
      name: cache-service
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:44Z"
        status: "True"
        type: Admitted
      host: cache-https-route-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:44Z"
    labels:
      app: cron0005-cargarutdatagrid
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: cron0005-cargarutdatagrid
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494854"
    uid: 461e824b-52d8-4a47-a378-360e6794af80
  spec:
    host: cron0005-cargarutdatagrid-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: cron0005-cargarutdatagrid
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:44Z"
        status: "True"
        type: Admitted
      host: cron0005-cargarutdatagrid-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:44Z"
    labels:
      app: nodejs-example
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      template: nodejs-example
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: nodejs-example
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494858"
    uid: c35ef74a-554b-46b1-b78a-1ebe03b9ab91
  spec:
    host: nodejs-example-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    to:
      kind: Service
      name: nodejs-example
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:44Z"
        status: "True"
        type: Admitted
      host: nodejs-example-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:44Z"
    labels:
      app: prox0001-registralibrore
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: prox0001-registralibrore
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494862"
    uid: a1dd8720-f11f-4f12-aecc-29b227d80335
  spec:
    host: prox0001-registralibrore-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prox0001-registralibrore
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:44Z"
        status: "True"
        type: Admitted
      host: prox0001-registralibrore-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:44Z"
    labels:
      app: prx0002-validareglas
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: prx0002-validareglas
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494864"
    uid: 1a363824-e9f2-4bbf-bb30-0fce964092a3
  spec:
    host: prx0002-validareglas-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0002-validareglas
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:44Z"
        status: "True"
        type: Admitted
      host: prx0002-validareglas-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:44Z"
    labels:
      app: prx0003-datos-datagrid
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: prx0003-datos-datagrid
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494869"
    uid: c3b6612c-da40-4290-a99d-1da71700697d
  spec:
    host: prx0003-datos-datagrid-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0003-datos-datagrid
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:44Z"
        status: "True"
        type: Admitted
      host: prx0003-datos-datagrid-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:44Z"
    labels:
      app: PRX0003-DatosPersona
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: prx0003-datospersona
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494871"
    uid: edace664-7b0f-406d-9ddf-21dc6cb2604f
  spec:
    host: prx0003-datospersona-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0003-datosperson
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:44Z"
        status: "True"
        type: Admitted
      host: prx0003-datospersona-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:44Z"
    labels:
      app: prx0004-enviarnotificaci
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: prx0004-enviarnotificaci
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494874"
    uid: e2bb4dc4-d69c-4c1e-b71b-7cf7bdd3c5e0
  spec:
    host: prx0004-enviarnotificaci-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0004-enviarnotificaci
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:44Z"
        status: "True"
        type: Admitted
      host: prx0004-enviarnotificaci-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:44Z"
    labels:
      app: PRX0005-validarToken
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: prx0005-validartoken
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494877"
    uid: 1ae9ef6e-e144-44bb-a0ed-4c54c9fdbe18
  spec:
    host: prx0005-validartoken-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: prx0005-validartoken
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:44Z"
        status: "True"
        type: Admitted
      host: prx0005-validartoken-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 2m
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:44Z"
    labels:
      app: srv0001-v2
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: srv0001-v2
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494882"
    uid: 49066927-69e6-4590-8a12-dda8784bc808
  spec:
    host: srv0001-v2-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0001-v2
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:44Z"
        status: "True"
        type: Admitted
      host: srv0001-v2-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:44Z"
    labels:
      app: srv0002
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: srv0002
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494885"
    uid: cad61d1f-d1da-40e7-81ca-124125b85c1f
  spec:
    host: srv0002-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0002
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:44Z"
        status: "True"
        type: Admitted
      host: srv0002-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:45Z"
    labels:
      app: srv0003
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: srv0003
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494887"
    uid: fbd79a87-b2a0-4aa3-9a01-005580aac1e4
  spec:
    host: srv0003-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0003
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:45Z"
        status: "True"
        type: Admitted
      host: srv0003-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 300s
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:45Z"
    labels:
      app: SRV0004-DeclaracionTransferencia
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: srv0004-declaraciontrans
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494891"
    uid: 5714ff09-40ff-4062-9118-7e9b680e7cf3
  spec:
    host: srv0004-declaraciontrans-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0004-declaraciontrans
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:45Z"
        status: "True"
        type: Admitted
      host: srv0004-declaraciontrans-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:45Z"
    labels:
      app: srv0005-descargalre
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: srv0005-descargalre
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494897"
    uid: e2f2597a-0688-48ad-98e2-e9302f8537fc
  spec:
    host: srv0005-descargalre-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0005-descargalre
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:45Z"
        status: "True"
        type: Admitted
      host: srv0005-descargalre-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:45Z"
    labels:
      app: SRV0006-ApiMetadata
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: srv0006-apimetadata
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494907"
    uid: 460b91fc-b5e9-4f10-ad57-8b8ec135688b
  spec:
    host: srv0006-apimetadata-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0006-apimetadata
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:45Z"
        status: "True"
        type: Admitted
      host: srv0006-apimetadata-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-25T15:23:45Z"
    labels:
      app: srv0007-bff
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: srv0007-bff
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494925"
    uid: c1fb7bd4-2050-4865-a976-ca56c9d17fb8
  spec:
    host: srv0007-bff-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0007-bff
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:45Z"
        status: "True"
        type: Admitted
      host: srv0007-bff-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
    creationTimestamp: "2023-05-25T15:23:45Z"
    labels:
      app: srv0008-validaciones
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: srv0008-validaciones
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494945"
    uid: 854a54f8-cd24-4776-b471-8ebe56e6e7c5
  spec:
    host: srv0008-validaciones-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0008-validaciones
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:45Z"
        status: "True"
        type: Admitted
      host: srv0008-validaciones-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:45Z"
    labels:
      app: srv0009-admnominatrabaj
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: srv0009-admnominatrabaj
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494969"
    uid: 43504182-2fed-4bda-97a1-85096a737999
  spec:
    host: srv0009-admnominatrabaj-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0009-admnominatrabaj
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:45Z"
        status: "True"
        type: Admitted
      host: srv0009-admnominatrabaj-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:45Z"
    labels:
      app: srv0010-decljson
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: srv0010-decljson
    namespace: api-fiscalizacion-dev
    resourceVersion: "11494988"
    uid: ace5f907-6c2d-4677-a747-b8ef0d55a1ff
  spec:
    host: srv0010-decljson-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0010-decljson
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:46Z"
        status: "True"
        type: Admitted
      host: srv0010-decljson-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftWebConsole
      openshift.io/host.generated: "true"
    creationTimestamp: "2023-05-25T15:23:45Z"
    labels:
      app: srv0012-ctrleventos
      migration.openshift.io/migrated-by-migmigration: ba74a433-680f-400b-880b-8d473b7be0bb
      migration.openshift.io/migrated-by-migplan: d32776aa-7836-49bd-a3f4-42e6abcad5c0
      velero.io/backup-name: migration-66e29-initial-zwkhh
      velero.io/restore-name: migration-66e29-final-9r56m
    name: srv0012-ctrleventos
    namespace: api-fiscalizacion-dev
    resourceVersion: "11495001"
    uid: b82a5db2-1f04-4478-80a9-b2333e3785b7
  spec:
    host: srv0012-ctrleventos-api-fiscalizacion-dev.api-cloud.dirtrab.cl
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: srv0012-ctrleventos
      weight: 100
    wildcardPolicy: None
  status:
    ingress:
    - conditions:
      - lastTransitionTime: "2023-05-25T15:23:46Z"
        status: "True"
        type: Admitted
      host: srv0012-ctrleventos-api-fiscalizacion-dev.api-cloud.dirtrab.cl
      routerCanonicalHostname: router-default.apps.ocp4azu.dirtrab.cl
      routerName: default
      wildcardPolicy: None
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
